--- a/postman/front/index.html
+++ b/postman/front/index.html
@@ -21,5 +21,9 @@ socket.addEventListener('message', (msg) => {
         break;
     }
 });
+
+function buttonClick(ev) {
+    socket.send(ev.target.textContent);
+}
 </script>
 </body>
