Messenger should be almost complete
Steam guard may be still pending though

--- a/messenger/front/index.html
+++ b/messenger/front/index.html
@@ -6,7 +6,7 @@
 <h2>Message log</h2>
 <div id="log"></div>
 <script>
-const socket = new WebSocket($url);
+const socket = new WebSocket('$url');
 socket.addEventListener('message', (msg) => {
     const obj = JSON.parse(msg.data);
     switch(obj.type) {
@@ -22,8 +22,9 @@ socket.addEventListener('message', (msg) => {
     }
 });
 
-function buttonClick(ev) {
-    socket.send(ev.target.textContent);
+function buttonClick() {
+    const msg = {type: 'login', payload: event.target.textContent};
+    socket.send(JSON.stringify(msg));
 }
 </script>
 </body>
