--- a/messenger/front/index.html
+++ b/messenger/front/index.html
@@ -1,6 +1,6 @@
 <body>
 <h1>Welcome to the Steam Link helper app</h1>
-<p>Currently the status of the pc is <span id="pcstatus">unknown</span></p>
+<p>Currently the status of the pc is <span id="pcstatus">unknown</span>. Wrong? <button onclick="forceDC()">Force disconnection</button></p>
 <p>Who's going to play?</p>
 <div>$buttons</div>
 <label for="guard">Steam guard code: </label>
@@ -34,6 +34,11 @@ function buttonClick() {
 
 function steamGuardClick() {
     const msg = {type: 'guard', payload: document.getElementById('guard').value};
+    socket.send(JSON.stringify(msg));
+}
+
+function forceDC() {
+    const msg = {type: 'dc'};
     socket.send(JSON.stringify(msg));
 }
 </script>
